--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </main>
     <nav id="scroll">
         <div class="wrapper">
-            <a href="#"><img src="images/logo-black.svg" alt=""></a>
+            <a class="logo-menu" href="#"><img src="images/logo-black.svg" alt=""></a>
             <ul>
                 <li><a href="#">home</a></li>
                 <li><a href="#">about</a></li>
@@ -51,8 +51,10 @@
         <div class="wrapper">
             <div class="capabilities_title">
                 <h3>our capabilities</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
-                <a href="#" class="btn">all services</a>
+                <div class="capabilities_title_content">
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+                    <a href="#" class="btn">all services</a>
+                </div>
             </div>
             <div class="capabilities_content">
                 <div class="capabilities_content_box">
@@ -60,7 +62,7 @@
                     <p class="capabilities_content_box_title">project and construction management</p>
                     <p class="capabilities_content_box_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
                 </div>
-                <div class="capabilities_content_box">
+                <div class="capabilities_content_box capabilities_content_box2">
                     <img src="images/capabilities2.png" alt="">
                     <p class="capabilities_content_box_title">structure audit and maintenance</p>
                     <p class="capabilities_content_box_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
@@ -81,8 +83,8 @@
     </section>
     <section class="newsletter">
         <div class="wrapper">
+            <p>Newsletter Signup</p>
             <form action="#">
-                <p>Newsletter Signup</p>
                 <div>
                     <input type="text" placeholder="test@youremail.com">
                 </div>
@@ -95,12 +97,12 @@
     <footer>
         <section class="footer_content">
             <div class="wrapper">
-                <div class="footer_company">
+                <div class="footer_company footer_content_box">
                     <span>company</span><br>
                     <a href="#"><img src="images/logo.svg" alt=""></a><br>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
                 </div>
-                <div class="footer_links">
+                <div class="footer_links footer_content_box">
                     <span>links</span>
                     <div class="footer_links_box">
                         <ul>
@@ -122,13 +124,13 @@
                         </ul>
                     </div>
                 </div>
-                <div class="footer_contact">
+                <div class="footer_contact footer_content_box">
                     <span>contact us</span>
                     <p>213 Baker Street Oriel City Kounty 7000 KNW, Kountry Name</p>
                     <a href=”tel:+239942334022”>+23 994 233 4022</a>
                     <a href="mailto:info@konstruct.com">info@konstruct.com</a>
                 </div>
-                <div class="footer_social">
+                <div class="footer_social footer_content_box">
                     <a class="icon-facebook" href=""></a>
                     <a class="icon-twitter" href=""></a>
                     <a class="icon-google" href=""></a>
